--- a/view/view.html
+++ b/view/view.html
@@ -15,7 +15,7 @@
             }
 
             function jsonToTable(obj) {
-                var ret = "";[[[]]]
+                var ret = "";
                 for (var o in obj) {
                     var data = obj[o];
                     if (typeof data !== 'object') {
