--- a/view/view.html
+++ b/view/view.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Anomaly Detection Server</h1>
-    <form action="/upload" method ="POST" enctype="multipart/form-data" target="result" >
+    <form action="/uploadAndPrint" method ="POST" enctype="multipart/form-data" target="result" >
         <label for="models">Choose a Model:</label>
         <select id="models" name="models">
         <option value="linear">Linear</option>
